# demo

./: README.md  pyproject.toml
demo/: app.py
static/: styles.css
templates/: base.html  index.html
templates/components/: centeredhero.html  columns.html  columns.old  footer.html  navbar.html  navbar.old
