[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["ill13 <ill13@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
Jinja2 = "^3.1.2"
arel = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
